[gd_scene load_steps=8 format=3 uid="uid://bhq3klwabv0i8"]

[ext_resource type="PackedScene" uid="uid://bsnpuv1ss4bxe" path="res://ui/fancy_menus/FancyButton.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://cklefvrbsam55" path="res://ui/fancy_menus/FancyMenu.tscn" id="2"]
[ext_resource type="Script" uid="uid://dmp2yfbgb8oso" path="res://godot4/ui/screens/back_screen/BackScreen.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dsnfbgkxo04ft" path="res://godot4/ui/screens/back_screen/back_screen.svg" id="4"]
[ext_resource type="BitMap" uid="uid://dfypfdal3vb7y" path="res://godot4/ui/screens/back_screen/buttons/area_Back.png" id="5"]
[ext_resource type="Texture2D" uid="uid://da1y3mq0xgrxq" path="res://godot4/ui/screens/back_screen/buttons/graphics_Back.png" id="6"]
[ext_resource type="PackedScene" uid="uid://d3abq633jh74a" path="res://godot4/ui/screens/Screen.tscn" id="16"]

[node name="BackScreen" instance=ExtResource("16")]
script = ExtResource("3")

[node name="Reference" type="TextureRect" parent="." index="0"]
modulate = Color(0.196078, 0.360784, 0.533333, 1)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("4")

[node name="FancyMenu" parent="." index="1" instance=ExtResource("2")]
auto_neighbours = "both"
focus_default_element_on_ready = false

[node name="Back" parent="FancyMenu" index="0" instance=ExtResource("1")]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 207.0
offset_bottom = 106.0
texture_normal = ExtResource("6")
texture_click_mask = ExtResource("5")

[connection signal="button_down" from="FancyMenu/Back" to="." method="_on_Back_button_down"]
